# research-template

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
research_template/: __init__.py
src/: model.py  train.py
tests/: e2e_test.py
