[tool.poetry]
name = "research-template"
version = "0.1.0"
description = ""
authors = ["tvergara <tomvergara@uc.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
wandb = "^0.19.8"
lightning = "^2.5.0.post0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
flake8 = "^7.1.2"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[flake8]
max-line-length = 100
